<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupWindow_room"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="40dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/home_card_background"
        android:padding="16dp"
        >
        <TextView
            android:id="@+id/popup_roomNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RoomNum"
            android:textSize="32sp"
            android:textColor="?attr/onHomeCardHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/popup_roomName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RoomName"
            android:textColor="?attr/onHomeCardHeader"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popup_roomNumber"/>

        <TextView
            android:id="@+id/popup_roomStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/onHomeCardHeader"
            android:text="@string/RoomStatus"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_roomName" />

        <TextView
            android:id="@+id/popup_roomAirQuality"
            android:layout_width="wrap_content"
            android:textColor="?attr/onHomeCardHeader"
            android:layout_height="wrap_content"
            android:text="@string/RoomAirQuality"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popup_roomStatus"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>