<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/table_border"
    android:paddingTop="3dp"
    android:paddingBottom="3dp"
    >

    <TextView
        android:id="@+id/roomNumberHeader"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/RoomNum"
        android:textSize="16sp"
        android:textColor="?attr/onBackgroundColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.25"
        />

    <TextView
        android:id="@+id/roomNameHeader"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/RoomName"
        android:textColor="?attr/onBackgroundColor"
        android:gravity="center_vertical"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/roomNumberHeader"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.25"
        />

    <TextView
        android:id="@+id/roomStatusHeader"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/RoomStatus"
        android:textColor="?attr/onBackgroundColor"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/roomNameHeader"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.25"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:id="@+id/roomAirQualityHeader"
        android:text="@string/RoomAirQuality"
        android:textColor="?attr/onBackgroundColor"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/roomStatusHeader"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
<!--<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TableRow
        android:background="@drawable/table_border"
        android:layout_marginTop="4dp"
        >
        <TextView
            android:id="@+id/roomNumberHeader"
            android:padding="4dp"
            android:text="@string/RoomNum"
            android:textSize="16sp"
            android:layout_weight="0.25"
            />

        <TextView
            android:id="@+id/roomNameHeader"
            android:padding="4dp"
            android:text="@string/RoomName"
            android:textSize="16sp"
            android:layout_weight="0.25"
            />

        <TextView
            android:id="@+id/roomStatusHeader"
            android:padding="4dp"
            android:text="@string/RoomStatus"
            android:textSize="16sp"
            android:layout_weight="0.25"
            />

        <TextView
            android:id="@+id/roomAirQualityHeader"
            android:padding="4dp"
            android:text="@string/RoomAirQuality"
            android:textSize="16sp"
            android:layout_weight="0.25"
            />

    </TableRow>
</TableLayout>-->